# HeadHunterAPI

./: README.md  config.py  main.py  pyproject.toml
api/: api_service.py
data/: vacancies.json
models/: vacancy.py
storage/: json_storage.py
tests/: test_api_service.py  test_json_storage.py  test_user_funcs.py  test_vacancy.py
utils/: user_funcs.py  user_interaction.py
